--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="application_title">Drunkmaster</string>
+    <string name="lock" >LOCK THE DEVICE</string>
+    <string name="slogan" >Because one beer aint enough</string>
 
 </resources>
