--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="title_activity_apps">Applications</string>
     <string name="Apps_label">Choose Applications to be blocked</string>
     <string name="next_step">Next step</string>
-    <string name="image"></string>
     <string name="title_activity_time">Choose block time</string>
     <string name="time_label">Apps will be blocked for:</string>
     <string name="title_activity_confirm">ConfirmActivity</string>
@@ -24,5 +23,8 @@
     <string name="title_activity_hello">hello</string>
     <string name="title_activity_fuck_you">FuckYou</string>
     <string name="title_activity_alert">AlertActivity</string>
+    <string name="title_activity_unlock">Unlock the Device</string>
+    <string name="locked">YOUR DEVICE IS LOCKED</string>
+    <string name="unlock">UNLOCK THE DEVICE</string>
 
 </resources>
