--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,7 @@
     <string name="title_activity_unlock">Unlock the Device</string>
     <string name="locked">YOUR DEVICE IS LOCKED</string>
     <string name="unlock">UNLOCK THE DEVICE</string>
+    <string name="title_activity_question">Question</string>
+    <string name="answer">Answer</string>
 
 </resources>
